Correccion de errores en la edicion y creacion de solicitudes de repuestos

--- a/client-app/src/app/home/informes/informe-contratos/informe-contratos.component.html
+++ b/client-app/src/app/home/informes/informe-contratos/informe-contratos.component.html
@@ -48,6 +48,10 @@
       </div>
     </div>
     <a class="btn btn-outline content-no-print btn-print"
+            (click)="limpiarCamposInfo()">
+      Limpiar Campos
+    </a>
+    <a class="btn btn-outline content-no-print btn-print"
        onclick="window.print()">
       Imprimir
     </a>
