--- a/client-app/src/app/home/informes/informe-equipos/informe-equipos.component.html
+++ b/client-app/src/app/home/informes/informe-equipos/informe-equipos.component.html
@@ -65,6 +65,10 @@
       </div>
 
       <a class="btn btn-outline content-no-print btn-print"
+         (click)="limpiarCamposInfo()">
+        Limpiar Campos
+      </a>
+      <a class="btn btn-outline content-no-print btn-print"
               onclick="window.print()">
         Imprimir
       </a>
@@ -200,6 +204,8 @@
       </button>
     </div>
   </div>
+  <label>Sin datos para la categoria</label>
+
   <div class="clr-row">
     <div class="clr-col-6">
       <table class="table table-vertical">
