--- a/client-app/src/app/home/mantenimiento/solicitud-repuesto/listar-solicitud/listar-solicitud.component.html
+++ b/client-app/src/app/home/mantenimiento/solicitud-repuesto/listar-solicitud/listar-solicitud.component.html
@@ -28,11 +28,11 @@
         <clr-icon shape="pencil"></clr-icon>
         Editar
       </button>
-      <button type="button" class="btn btn-sm btn-secondary" *ngIf="this.total > 0"
-              (click)="exportToExcel()">
-        <clr-icon shape="pencil"></clr-icon>
-        Export
-      </button>
+<!--      <button type="button" class="btn btn-sm btn-secondary" *ngIf="this.total > 0"-->
+<!--              (click)="exportToExcel()">-->
+<!--        <clr-icon shape="pencil"></clr-icon>-->
+<!--        Export-->
+<!--      </button>-->
     </div>
     <p-table [value]="solicitudRepuestos" selectionMode="single" [(selection)]="selectedRepuesto" dataKey="id"
              [paginator]="true" [rows]="rows" [showCurrentPageReport]="true" [(first)]="first"
@@ -41,7 +41,7 @@
       <ng-template pTemplate="header">
         <tr>
           <th style="width: 1rem"></th>
-          <th class="table-header cod-cant-field">ID</th>
+          <th class="table-header">ID</th>
           <th class="table-header">Estado</th>
           <th class="table-header">Fecha</th>
         </tr>
@@ -54,7 +54,7 @@
                     [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'">
             </button>
           </td>
-          <td class="table-column text-center cod-cant-field">{{solicitud.id}}</td>
+          <td class="table-column text-center">{{solicitud.id}}</td>
           <td class="table-column text-center">{{solicitud.estado}}</td>
           <td class="table-column text-center">{{solicitud.fechaSolicitud}}</td>
         </tr>
@@ -62,12 +62,12 @@
 
       <ng-template pTemplate="rowexpansion" let-solicitud>
         <tr>
-          <td colspan="7">
+          <td colspan="4">
             <div class="p-p-3">
               <p-table [value]="solicitud.solicitudRepuestoDetalles">
                 <ng-template pTemplate="header">
                   <tr>
-                    <th class="table-column">Código</th>
+                    <th class="table-column ">Código</th>
                     <th class="table-column">Descripción</th>
                     <th class="table-column">Tipo</th>
                     <th class="table-column">Marca</th>
