--- a/client-app/src/app/home/mantenimiento/orden-trabajo/edit-mantenimiento/edit-mantenimiento.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/edit-mantenimiento/edit-mantenimiento.component.html
@@ -96,7 +96,7 @@
         <td class="table-column">{{detalle.repuesto?.modelo.modelo}}</td>
         <td class="table-column">{{detalle.repuesto?.representante?.nombre}}</td>
         <td class="table-column" style="text-align: right">{{detalle.repuesto?.precio}}</td>
-        <td class="table-column" style="text-align: center">{{detalle.cantidadSolicitad}}</td>
+        <td class="table-column" style="text-align: center">{{detalle.cantidadSolicitada}}</td>
         <td>
           <button type="button" pButton pRipple icon="pi pi-pencil" class="p-button-success"
                   (click)="editarRepuesto(detalle)"></button>
@@ -165,6 +165,7 @@
 
 <!--Modal para agregar o editar los datos de un repuesto-->
 <app-solicitud-repuesto-detalle *ngIf="modalAddEditDetalleOpen"
+                                [solicitudRepuesto]="solicitudRepuesto"
                                 [solicitudRepuestoDetalle]="detalleSeleccionado"
                                 [isEditRepuesto]="true"
                                 [isAtenderOT]="true"
