--- a/client-app/src/app/home/mantenimiento/solicitud-repuesto/edit-solicitud/edit-solicitud.component.html
+++ b/client-app/src/app/home/mantenimiento/solicitud-repuesto/edit-solicitud/edit-solicitud.component.html
@@ -51,7 +51,7 @@
           <td class="table-column">{{detalle.repuesto?.modelo.modelo}}</td>
           <td class="table-column">{{detalle.repuesto?.representante?.nombre}}</td>
           <td class="table-column" style="text-align: right">{{detalle.repuesto?.precio}}</td>
-          <td class="table-column" style="text-align: center">{{detalle.cantidadSolicitad}}</td>
+          <td class="table-column" style="text-align: center">{{detalle.cantidadSolicitada}}</td>
           <td>
             <button type="button" pButton pRipple icon="pi pi-pencil" class="p-button-success" (click)="editRepuesto(detalle)"></button>
             <button type="button" pButton pRipple icon="pi pi-trash" class="p-button-danger" (click)="eliminarDetalleRepuesto(detalle)"></button>
@@ -80,6 +80,7 @@
 
 <!--Modal para agregar o editar los datos de un repuesto-->
 <app-solicitud-repuesto-detalle *ngIf="modalAddEditDetalleOpen"
+                                [solicitudRepuesto]="solicitudRepuesto"
                                 [solicitudRepuestoDetalle]="detalleSeleccionado"
                                 [isEditRepuesto]="isEditDetalle"
                                 [isAtenderOT]="false"
