Se agregaron los cambios para utilizar el metodo para eliminar un detalle de la solicitud de repuestos

--- a/client-app/src/app/home/mantenimiento/orden-trabajo/edit-orden-trabajo/edit-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/edit-orden-trabajo/edit-orden-trabajo.component.html
@@ -177,6 +177,10 @@
         </option>
       </select>
     </clr-select-container>
+    <div *ngIf="solicitudRepuesto != null">
+      <p class="label-input ">Solicitud Repuesto ID: {{solicitudRepuesto?.id}}</p>
+    </div>
+
   </div>
   <br/>
   <div class="card">
