Arreglos del filtro de contrato y el boton de add en rrepuesto se habilita solo si tiene codigo y descripcion por lo menos

--- a/client-app/src/app/home/mantenimiento/repuestos/add-repuesto/add-repuesto.component.html
+++ b/client-app/src/app/home/mantenimiento/repuestos/add-repuesto/add-repuesto.component.html
@@ -84,7 +84,9 @@
       <clr-textarea-container>
         <label class="clr-col-5">Descripción:</label>
         <textarea class="tamanho-total" clrTextarea [(ngModel)]="descripcion"
-                  name="description" required [disabled]="readonlyField" tabindex="6">
+                  name="description" required [disabled]="readonlyField" tabindex="6"
+                  #despRep
+                  (keyup)="onKeyDescripcionRepuesto(despRep.value)">
             </textarea>
         <clr-control-error>El campo es obligatorio</clr-control-error>
       </clr-textarea-container>
