Corrección de botones de lista de repuestos

--- a/client-app/src/app/home/mantenimiento/orden-trabajo/edit-mantenimiento/edit-mantenimiento.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/edit-mantenimiento/edit-mantenimiento.component.html
@@ -92,8 +92,8 @@
         <td class="table-column" style="text-align: center">{{detalle.repuesto?.codigo}}</td>
         <td class="table-column">{{detalle.repuesto?.descripcionArticulo}}</td>
         <td class="table-column">{{detalle.repuesto?.tipoEquipo?.tipo}}</td>
-        <td class="table-column">{{detalle.repuesto?.marca.marca}}</td>
-        <td class="table-column">{{detalle.repuesto?.modelo.modelo}}</td>
+        <td class="table-column">{{detalle.repuesto?.marca?.marca}}</td>
+        <td class="table-column">{{detalle.repuesto?.modelo?.modelo}}</td>
         <td class="table-column">{{detalle.repuesto?.representante?.nombre}}</td>
         <td class="table-column" style="text-align: right">{{detalle.repuesto?.precio}}</td>
         <td class="table-column" style="text-align: center">{{detalle.cantidadSolicitada}}</td>
