--- a/client-app/src/app/home/contrato/lista-contrato/lista-contrato.component.html
+++ b/client-app/src/app/home/contrato/lista-contrato/lista-contrato.component.html
@@ -53,7 +53,7 @@
       <clr-icon shape="search"></clr-icon>
     </a>
 
-    <clr-input-container>
+    <clr-input-container class="id-lic-filter">
       <label>ID Licitación:</label>
       <input clrInput type="text" [(ngModel)]="idContrato" name="idContrato"/>
     </clr-input-container>
