Cambios en la pantalla de repuestos, contrato y mantenimiento

--- a/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
+++ b/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
@@ -151,6 +151,66 @@
   </clr-datagrid>
 
   <br/><br/>
+  <div class="clr-row clr-justify-content-start" *ngIf="isTipoMantenimiento">
+    <label class="clr-col-1 clr-align-self-end form-add-equipo-label">Repuesto:</label>
+    <div class="clr-col-3 clr-align-self-end">
+      <select class="tamanho-total" name="repuestoId" [(ngModel)]="repuestoId"
+              (ngModelChange)="onSelectedRepuesto()">
+        <option>Seleccionar Repuesto</option>
+        <option *ngFor="let repuesto of repuestos"
+                value={{repuesto.id}}>{{repuesto?.codigo}}- {{repuesto?.descripcionArticulo}} - {{repuesto.tipoEquipo?.tipo}}
+          -{{repuesto.marca?.marca}}-{{repuesto.modelo?.modelo}}
+        </option>
+      </select>
+    </div>
+
+    <div class="clr-col-1" *ngIf="isTipoMantenimiento">
+      <button class=" btn btn-sm btn-success clr-align-self-end btn-add-equipo"
+              (click)="addRepuesto()" [disabled]="repuestoId == 'Seleccionar Repuesto' ">
+        <clr-icon shape="add"></clr-icon>
+        Add
+      </button>
+    </div>
+  </div>
+  <br/>
+  <!--  lista repuestos-->
+
+  <clr-datagrid *ngIf="isTipoMantenimiento">
+    <clr-dg-action-bar>
+      <div class="btn-group">
+        <button type="button" class="btn btn-sm btn-warning" [disabled]="!isSelectedRepuesto"
+                (click)="onDeleteRepuesto()">
+          <clr-icon shape="trash"></clr-icon>
+          Delete
+        </button>
+      </div>
+    </clr-dg-action-bar>
+    <clr-dg-column class="table-header">Tipo</clr-dg-column>
+    <clr-dg-column class="table-header">Marca</clr-dg-column>
+    <clr-dg-column class="table-header">Modelo</clr-dg-column>
+    <clr-dg-column class="table-header">Representante</clr-dg-column>
+    <clr-dg-column class="table-header">Código</clr-dg-column>
+    <clr-dg-column class="table-header">Descripción</clr-dg-column>
+    <clr-dg-column class="table-header">Precio</clr-dg-column>
+    <clr-dg-column class="table-header">Cantidad Adquirida</clr-dg-column>
+    <clr-dg-column class="table-header">Stock</clr-dg-column>
+
+    <clr-dg-row *ngFor="let repuesto of selectedRepuestos"
+                (click)="onSelectRepuesto(repuesto)"
+                [class.selectedRepuesto]="repuesto === selectedRepuesto">
+      <clr-dg-cell class="table-column">{{repuesto?.tipoEquipo?.tipo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.marca?.marca}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.modelo?.modelo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.representante?.nombre}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.codigo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.descripcionArticulo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.precio}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto.cantidadAdquirida}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto.cantidadExistente}}</clr-dg-cell>
+    </clr-dg-row>
+  </clr-datagrid>
+
+  <br/><br/>
   <div class="clr-row clr-justify-content-start">
     <button class="btn btn-sm btn-success"
             [disabled]="(contratoForm.form.invalid )"
