--- a/client-app/src/app/shared/solicitud-detalle/solicitud-repuesto-detalle/solicitud-repuesto-detalle.component.html
+++ b/client-app/src/app/shared/solicitud-detalle/solicitud-repuesto-detalle/solicitud-repuesto-detalle.component.html
@@ -37,23 +37,38 @@
       <div class="clr-row clr-justify-content-start">
         <!--columna izquierda-->
         <div class="clr-col-6">
-          <clr-input-container *ngIf="!isEditRepuesto">
-            <label class="clr-col-5">Código:</label>
-            <input class="tamanho-total clr-col-8" clrInput id="codRepuesto"
-                   name="codRepuesto" #codRep tabindex="1"
-                   (keyup.enter)="onEnterCodigoRepuesto(codRep.value)"
-                   (keyup)="onKeyCodigoRepuesto(codRep.value)"
-                   [(ngModel)]="codigo" required />
-            <clr-control-helper>Ingrese un codigo y presione enter para verificar existencia</clr-control-helper>
-            <clr-control-error>El campo es obligatorio</clr-control-error>
-          </clr-input-container>
+          <div *ngIf="!isEditRepuesto">
+            <div *ngIf="mostrarRep">
+              <label class="clr-col-5">Repuestos Existentes</label>
+              <select clrSelect name="repExistenteId" [(ngModel)]="repExistenteId"
+                      (ngModelChange)="onSelectRepuesto()">
+                <option disabled>Seleccionar Repuesto</option>
+                <option *ngFor="let repuesto of repuestos"
+                        value={{repuesto.id}}>{{repuesto.descripcionArticulo}}
+                </option>
+              </select>
+            </div>
 
-          <clr-input-container *ngIf="isEditRepuesto">
-            <label class="clr-col-5">Código:</label>
-            <input class="tamanho-total clr-col-8" clrInput type="text" id="codigo"
-                   name="codigo" [(ngModel)]="codigo" required [disabled]="isAtenderOT"/>
+            <clr-textarea-container>
+              <label class="clr-col-5">Descripción:</label>
+              <textarea class="tamanho-total" clrTextarea [(ngModel)]="descripcion"
+                        name="description" required tabindex="1"
+                        #despRep
+                        (keyup.enter)="onEnterDescripcionRepuesto(despRep.value)"
+                        (keyup)="onKeyDescripcionRepuesto(despRep.value)">
+            </textarea>
+              <clr-control-helper>Ingrese un keyword y presione enter para verificar existencia</clr-control-helper>
+              <clr-control-error>El campo es obligatorio</clr-control-error>
+            </clr-textarea-container>
+          </div>
+
+          <clr-textarea-container *ngIf="isEditRepuesto">
+            <label class="clr-col-5">Descripción:</label>
+            <textarea class="tamanho-total" clrTextarea [(ngModel)]="descripcion"
+                      name="description" required [disabled]="readonlyField">
+            </textarea>
             <clr-control-error>El campo es obligatorio</clr-control-error>
-          </clr-input-container>
+          </clr-textarea-container>
 
           <clr-input-container>
             <label class="clr-col-5">Precio:</label>
@@ -98,13 +113,13 @@
 
         <!--columna derecha-->
         <div class="clr-col-6">
-          <clr-textarea-container>
-            <label class="clr-col-5">Descripción:</label>
-            <textarea class="tamanho-total" clrTextarea [(ngModel)]="descripcion"
-                      name="description" required [disabled]="readonlyField">
-            </textarea>
+          <clr-input-container></clr-input-container>
+          <clr-input-container>
+            <label class="clr-col-5">Código:</label>
+            <input class="tamanho-total clr-col-8" clrInput type="text" id="codigo"
+                   name="codigo" [(ngModel)]="codigo" required [disabled]="isAtenderOT"/>
             <clr-control-error>El campo es obligatorio</clr-control-error>
-          </clr-textarea-container>
+          </clr-input-container>
 
           <clr-input-container>
             <label class="clr-col-5">Cant. Usada:</label>
