Correccion de errores en orden de trabajo y contrato

--- a/client-app/src/app/home/contrato/add-contrato/add-contrato.component.html
+++ b/client-app/src/app/home/contrato/add-contrato/add-contrato.component.html
@@ -95,7 +95,7 @@
   </div>
   <br/><br/>
 
-  <div class="clr-row clr-justify-content-start" *ngIf="isTipoMantenimiento">
+  <div class="clr-row clr-justify-content-start">
     <label class="clr-col-1 clr-align-self-end form-add-equipo-label">Equipo:</label>
     <div class="clr-col-3 clr-align-self-end">
       <select class="tamanho-total" name="equipoId" [(ngModel)]="equipoId"
