--- a/client-app/src/app/home/mantenimiento/orden-trabajo/add-orden-trabajo/add-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/add-orden-trabajo/add-orden-trabajo.component.html
@@ -93,7 +93,7 @@
       <th class=" table-header">Ubicación</th>
       <th class=" table-header">Representante</th>
       <th class=" table-header">Fecha Garantia</th>
-      <th class=" table-header left">Contrato</th>
+<!--      <th class=" table-header left">Contrato</th>-->
     </tr>
     </thead>
     <tbody>
@@ -108,7 +108,7 @@
         {{equipoSeleccionado?.ubicacion?.numeroSala ? equipoSeleccionado?.ubicacion?.numeroSala + ' ' : '' }}</td>
       <td class="table-column">{{equipoSeleccionado?.representante.nombre}}</td>
       <td class="table-column">{{equipoSeleccionado?.fechaVenGarantia}}</td>
-      <td class=" table-column left">{{equipoSeleccionado?.contrato.numeroContrato}}</td>
+<!--      <td class=" table-column left">{{equipoSeleccionado?.contrato.numeroContrato}}</td>-->
     </tr>
     </tbody>
   </table>
