--- a/client-app/src/app/home/mantenimiento/orden-trabajo/edit-mantenimiento/edit-mantenimiento.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/edit-mantenimiento/edit-mantenimiento.component.html
@@ -47,7 +47,7 @@
       <th class=" table-header">Ubicación</th>
       <th class=" table-header">Representante</th>
       <th class=" table-header">Fecha Garantia</th>
-      <th class=" table-header left">Contrato</th>
+<!--      <th class=" table-header left">Contrato</th>-->
     </tr>
     </thead>
     <tbody>
@@ -64,7 +64,7 @@
         {{equipo?.ubicacion?.numeroSala ? equipo?.ubicacion?.numeroSala + ' ' : '' }}</td>
       <td class="table-column">{{equipo?.representante.nombre}}</td>
       <td class="table-column">{{equipo?.fechaVenGarantia}}</td>
-      <td class=" table-columnleft">{{equipo?.contrato.numeroContrato}}</td>
+<!--      <td class=" table-columnleft">{{equipo?.contrato.numeroContrato}}</td>-->
     </tr>
     </tbody>
   </table>
