Cambios solicitados en la vista

--- a/client-app/src/app/home/equipo/add-equipo/add-equipo.component.html
+++ b/client-app/src/app/home/equipo/add-equipo/add-equipo.component.html
@@ -9,10 +9,10 @@
         <clr-control-error>El campo es obligatorio</clr-control-error>
       </clr-input-container>
 
-      <clr-input-container>
-        <label>Nro. Lote:</label>
-        <input clrInput type="text" [(ngModel)]="numeroLote" name="lote"/>
-      </clr-input-container>
+<!--      <clr-input-container>-->
+<!--        <label>Nro. Lote:</label>-->
+<!--        <input clrInput type="text" [(ngModel)]="numeroLote" name="lote"/>-->
+<!--      </clr-input-container>-->
 
       <clr-input-container>
         <label>Costo:</label>
@@ -80,11 +80,11 @@
         </select>
       </clr-select-container>
 
-      <clr-input-container>
-        <label>Fecha Compra:</label>
-        <input clrInput type="date" [(ngModel)]="fechaCompra" name="fechaCompra"
-               min="1990-01-01" max="2050-12-31"/>
-      </clr-input-container>
+<!--      <clr-input-container>-->
+<!--        <label>Fecha Compra:</label>-->
+<!--        <input clrInput type="date" [(ngModel)]="fechaCompra" name="fechaCompra"-->
+<!--               min="1990-01-01" max="2050-12-31"/>-->
+<!--      </clr-input-container>-->
 
       <clr-input-container>
         <label>Vto. Garantia:</label>
@@ -170,7 +170,7 @@
               (ngModelChange)="onSelectUbicacion()">
         <option>Agregar Ubicación</option>
         <option *ngFor="let ubicacion of ubicaciones"
-                value={{ubicacion.id}}>{{ubicacion.servicio}}
+                value={{ubicacion.id}}>{{ubicacion.servicio}}-{{ubicacion.numeroSala}}
         </option>
       </select>
     </div>
