--- a/client-app/src/app/shared/tipo-equipo/tipo-equipo.component.html
+++ b/client-app/src/app/shared/tipo-equipo/tipo-equipo.component.html
@@ -4,7 +4,7 @@
   <div class="modal-body">
     <form clrForm #tipoEquipoForm="ngForm">
       <clr-input-container>
-        <label class="clr-col-5">Tipo:</label>
+        <label class="clr-col-5">Nombre Genérico:</label>
         <input class="tamanho-total clr-col-10" clrInput type="text" [(ngModel)]="tipo" name="tipo" required />
         <clr-control-error>El campo es obligatorio</clr-control-error>
       </clr-input-container>
