--- a/client-app/src/app/home/equipo/edit-equipo/edit-equipo.component.html
+++ b/client-app/src/app/home/equipo/edit-equipo/edit-equipo.component.html
@@ -8,10 +8,10 @@
         <input clrInput type="text" [(ngModel)]="numeroSerie" name="serie" required/>
         <clr-control-error>El campo es obligatorio</clr-control-error>
       </clr-input-container>
-      <clr-input-container>
-        <label>Nro. Lote:</label>
-        <input clrInput type="text" [(ngModel)]="numeroLote" name="lote"/>
-      </clr-input-container>
+<!--      <clr-input-container>-->
+<!--        <label>Nro. Lote:</label>-->
+<!--        <input clrInput type="text" [(ngModel)]="numeroLote" name="lote"/>-->
+<!--      </clr-input-container>-->
       <clr-input-container>
         <label>Costo:</label>
         <input clrInput type="text" [(ngModel)]="costo" name="costo"/>
@@ -75,11 +75,11 @@
         </select>
       </clr-select-container>
 
-      <clr-input-container>
-        <label>Fecha Compra:</label>
-        <input clrInput type="date" [(ngModel)]="fechaCompra" name="fechaCompra"
-               min="1990-01-01" max="2050-12-31" tabindex="6"/>
-      </clr-input-container>
+<!--      <clr-input-container>-->
+<!--        <label>Fecha Compra:</label>-->
+<!--        <input clrInput type="date" [(ngModel)]="fechaCompra" name="fechaCompra"-->
+<!--               min="1990-01-01" max="2050-12-31" tabindex="6"/>-->
+<!--      </clr-input-container>-->
       <clr-input-container>
         <label>Vto. Garantia:</label>
         <input clrInput type="date" [(ngModel)]="fechaVenGarantia" name="fechaVenGarantia"
@@ -156,7 +156,7 @@
               (ngModelChange)="onSelectUbicacion()">
         <option>Agregar Ubicación</option>
         <option *ngFor="let ubicacion of ubicaciones"
-                value={{ubicacion.id}}>{{ubicacion.servicio}}
+                value={{ubicacion.id}}>{{ubicacion.servicio}}-{{ubicacion.numeroSala}}
         </option>
       </select>
     </div>
