--- a/client-app/src/app/home/mantenimiento/orden-trabajo/add-orden-trabajo/add-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/add-orden-trabajo/add-orden-trabajo.component.html
@@ -74,6 +74,18 @@
         </div>
       </div>
     </div>
+
+<!--    estado del equipo-->
+    <div class="clr-col-3"  *ngIf="selectedEquipo">
+    <clr-select-container>
+      <label>Estado</label>
+      <select clrSelect name="estado" [(ngModel)]="equipoSeleccionado.estado">
+        <option value="Operativo">Operativo</option>
+        <option value="Inoperativo">Inoperativo</option>
+        <option value="Irreparable">Irreparable</option>
+      </select>
+    </clr-select-container>
+    </div>
     <!--    botón eliminar-->
     <div class="clr-col-1 clr-align-self-end" *ngIf="selectedEquipo">
       <a type="button" class="btn btn-sm btn-danger-outline"
@@ -113,86 +125,86 @@
     </tbody>
   </table>
 
-  <br/>
-  <hr>
+<!--  <br/>-->
+<!--  <hr>-->
 
-  <h4 class="form-orden-trabajo-sub-title">Repuestos Solicitados</h4>
-  <div class="clr-row">
-    <div class="alert alert-danger" *ngIf="repError">
-      <div class="alert-items">
-        <div class="alert-item static">
-          <div class="alert-icon-wrapper">
-            <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
-          </div>
-          <span class="alert-text">{{repErrorMessage}}</span>
-        </div>
-      </div>
-      <button type="button" class="close" aria-label="Close" (click)="repError = false">
-        <clr-icon aria-hidden="true" shape="close"></clr-icon>
-      </button>
-    </div>
-  </div>
-  <div class="clr-col-8">
-    <clr-select-container>
-      <label>Solicitud Repuesto:</label>
-      <select clrSelect name="solicitudRepId" [(ngModel)]="solicitudRepId"
-              (ngModelChange)="onSelectedSolicitudRepuesto()">
-        <option>Seleccionar Solicitud ID</option>
-        <option *ngFor="let solicitud of solicitudRepuestoPendientes"
-                value={{solicitud.id}}>{{solicitud.id}}
-        </option>
-      </select>
-    </clr-select-container>
-  </div>
-  <br/>
-  <div class="card">
-    <div class="btn-group">
-      <button type="button" class="btn btn-sm btn-secondary"
-              (click)="agregarRepuesto()">
-        <clr-icon shape="plus"></clr-icon>
-        Agregar Repuesto
-      </button>
-    </div>
+<!--  <h4 class="form-orden-trabajo-sub-title">Repuestos Solicitados</h4>-->
+<!--  <div class="clr-row">-->
+<!--    <div class="alert alert-danger" *ngIf="repError">-->
+<!--      <div class="alert-items">-->
+<!--        <div class="alert-item static">-->
+<!--          <div class="alert-icon-wrapper">-->
+<!--            <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>-->
+<!--          </div>-->
+<!--          <span class="alert-text">{{repErrorMessage}}</span>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <button type="button" class="close" aria-label="Close" (click)="repError = false">-->
+<!--        <clr-icon aria-hidden="true" shape="close"></clr-icon>-->
+<!--      </button>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <div class="clr-col-8">-->
+<!--    <clr-select-container>-->
+<!--      <label>Solicitud Repuesto:</label>-->
+<!--      <select clrSelect name="solicitudRepId" [(ngModel)]="solicitudRepId"-->
+<!--              (ngModelChange)="onSelectedSolicitudRepuesto()">-->
+<!--        <option>Seleccionar Solicitud ID</option>-->
+<!--        <option *ngFor="let solicitud of solicitudRepuestoPendientes"-->
+<!--                value={{solicitud.id}}>{{solicitud.id}}-->
+<!--        </option>-->
+<!--      </select>-->
+<!--    </clr-select-container>-->
+<!--  </div>-->
+<!--  <br/>-->
+<!--  <div class="card">-->
+<!--    <div class="btn-group">-->
+<!--      <button type="button" class="btn btn-sm btn-secondary"-->
+<!--              (click)="agregarRepuesto()">-->
+<!--        <clr-icon shape="plus"></clr-icon>-->
+<!--        Agregar Repuesto-->
+<!--      </button>-->
+<!--    </div>-->
 
-    <p-table [value]="solicitudRepuestoDetalles">
-      <ng-template pTemplate="header">
-        <tr>
-          <th class="table-header">Código</th>
-          <th class="table-header">Descripción</th>
-          <th class="table-header">Tipo</th>
-          <th class="table-header">Marca</th>
-          <th class="table-header">Modelo</th>
-          <th class="table-header">Representante</th>
-          <th class="table-header">Precio</th>
-          <th class="table-header">Cantidad Solicitada</th>
-          <th style="width:6rem"></th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-detalle>
-        <tr>
-          <td class="table-column" style="text-align: center">{{detalle.repuesto?.codigo}}</td>
-          <td class="table-column">{{detalle.repuesto?.descripcionArticulo}}</td>
-          <td class="table-column">{{detalle.repuesto?.tipoEquipo?.tipo}}</td>
-          <td class="table-column">{{detalle.repuesto?.marca?.marca}}</td>
-          <td class="table-column">{{detalle.repuesto?.modelo?.modelo}}</td>
-          <td class="table-column">{{detalle.repuesto?.representante?.nombre}}</td>
-          <td class="table-column" style="text-align: right">{{detalle.repuesto?.precio}}</td>
-          <td class="table-column" style="text-align: center">{{detalle.cantidadSolicitada}}</td>
-          <td>
-            <button type="button" pButton pRipple icon="pi pi-pencil" class="p-button-success"
-                    (click)="editarRepuesto(detalle)"></button>
-            <button type="button" pButton pRipple icon="pi pi-trash" class="p-button-danger"
-                    (click)="eliminarDetalleRepuesto(detalle, true)"></button>
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
-  </div>
+<!--    <p-table [value]="solicitudRepuestoDetalles">-->
+<!--      <ng-template pTemplate="header">-->
+<!--        <tr>-->
+<!--          <th class="table-header">Código</th>-->
+<!--          <th class="table-header">Descripción</th>-->
+<!--          <th class="table-header">Tipo</th>-->
+<!--          <th class="table-header">Marca</th>-->
+<!--          <th class="table-header">Modelo</th>-->
+<!--          <th class="table-header">Representante</th>-->
+<!--          <th class="table-header">Precio</th>-->
+<!--          <th class="table-header">Cantidad Solicitada</th>-->
+<!--          <th style="width:6rem"></th>-->
+<!--        </tr>-->
+<!--      </ng-template>-->
+<!--      <ng-template pTemplate="body" let-detalle>-->
+<!--        <tr>-->
+<!--          <td class="table-column" style="text-align: center">{{detalle.repuesto?.codigo}}</td>-->
+<!--          <td class="table-column">{{detalle.repuesto?.descripcionArticulo}}</td>-->
+<!--          <td class="table-column">{{detalle.repuesto?.tipoEquipo?.tipo}}</td>-->
+<!--          <td class="table-column">{{detalle.repuesto?.marca?.marca}}</td>-->
+<!--          <td class="table-column">{{detalle.repuesto?.modelo?.modelo}}</td>-->
+<!--          <td class="table-column">{{detalle.repuesto?.representante?.nombre}}</td>-->
+<!--          <td class="table-column" style="text-align: right">{{detalle.repuesto?.precio}}</td>-->
+<!--          <td class="table-column" style="text-align: center">{{detalle.cantidadSolicitada}}</td>-->
+<!--          <td>-->
+<!--            <button type="button" pButton pRipple icon="pi pi-pencil" class="p-button-success"-->
+<!--                    (click)="editarRepuesto(detalle)"></button>-->
+<!--            <button type="button" pButton pRipple icon="pi pi-trash" class="p-button-danger"-->
+<!--                    (click)="eliminarDetalleRepuesto(detalle, true)"></button>-->
+<!--          </td>-->
+<!--        </tr>-->
+<!--      </ng-template>-->
+<!--    </p-table>-->
+<!--  </div>-->
   <br/>
   <hr>
   <div class="clr-col-8">
     <clr-input-container>
-      <label>Estado:</label>
+      <label>Estado de la orden:</label>
       <input clrInput type="text" [(ngModel)]="estado" name="estado" required/>
       <clr-control-error>El campo es obligatorio</clr-control-error>
     </clr-input-container>
@@ -243,12 +255,12 @@
 </form>
 
 <!--Modal para agregar o editar los datos de un repuesto-->
-<app-solicitud-repuesto-detalle *ngIf="modalAddEditDetalleOpen"
-                                [solicitudRepuesto]="solicitudRepuesto"
-                                [solicitudRepuestoDetalle]="detalleSeleccionado"
-                                [isEditRepuesto]="isEditDetalle"
-                                [isAtenderOT]="false"
-                                (detalleRepuestoToUpdate)="addEditRepuesto($event)"
-                                (cancelAddEditRepuesto)="onCancelAddEditRepuesto($event)">
-</app-solicitud-repuesto-detalle>
+<!--<app-solicitud-repuesto-detalle *ngIf="modalAddEditDetalleOpen"-->
+<!--                                [solicitudRepuesto]="solicitudRepuesto"-->
+<!--                                [solicitudRepuestoDetalle]="detalleSeleccionado"-->
+<!--                                [isEditRepuesto]="isEditDetalle"-->
+<!--                                [isAtenderOT]="false"-->
+<!--                                (detalleRepuestoToUpdate)="addEditRepuesto($event)"-->
+<!--                                (cancelAddEditRepuesto)="onCancelAddEditRepuesto($event)">-->
+<!--</app-solicitud-repuesto-detalle>-->
 
